--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "serve-favicon": "~2.0.1",
     "debug": "~1.0.4",
     "jade": "~1.5.0",
-    "mongoose": "~2.0.2"
+    "mongoose": "~2.0.2",
+    "socket.io": "latest"
   }
 }
